--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Contact Us</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h3 class="section-subheading text-muted">MGM Travel is committed to providing top-notch service. Reach out anytime via phone or email, and our dedicated team will assist promptly. Our contact center, Live Chat, and Email are available 24x7, ensuring your queries are addressed with care and efficiency..</h3>
                 </div>
                 <!-- * * * * * * * * * * * * * * *-->
                 <!-- * * SB Forms Contact Form * *-->
