--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                             <i class="fas fa-lock fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="my-3">IATA Certified</h4>
-                        <p class="text-muted">"As a certified IATA travel agency, we are the corporate travel partner of choice. Our prestigious IATA certification reflects our unwavering commitment to corporate excellence and compliance with global industry standards. We provide a comprehensive suite of customized services, offering efficient booking solutions, meticulous itinerary management, and cost-effective travel solutions. Count on us to elevate your corporate travel experience with professionalism and precision."</p>
+                        <p class="text-muted">"Our prestigious IATA certification reflects our unwavering commitment to corporate excellence and compliance with global industry standards. We provide a comprehensive suite of customized services, offering efficient booking solutions, meticulous itinerary management, and cost-effective travel solutions. Count on us to elevate your corporate travel experience with professionalism and precision."</p>
                     </div>
                 </div>
             </div>
