--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                             <i class="fas fa-laptop fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="my-3">Round The Clock</h4>
-                        <p class="text-muted">"Tailored to corporate clients, our 24/7 travel support guarantees a seamless travel experience. Our dedicated team is here to assist with itinerary changes, emergencies, and any travel requirements, ensuring your business trips are worry-free. Enjoy confidence in your corporate travel, knowing dependable support is accessible day and night, customized to meet your specific needs."</p>
+                        <p class="text-muted">""Serving corporate clients, our 24/7 travel support ensures seamless journeys. Our dedicated team expertly handles itinerary changes, emergencies, and all travel needs, providing worry-free business trips. Trust in our dependable and personalized support, available round the clock, tailored to your unique requirements, and travel with confidence."</p>
                     </div>
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
