--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                             <i class="fas fa-laptop fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="my-3">Round The Clock</h4>
-                        <p class="text-muted">""Serving corporate clients, our 24/7 travel support ensures seamless journeys. Our dedicated team expertly handles itinerary changes, emergencies, and all travel needs, providing worry-free business trips. Trust in our dependable and personalized support, available round the clock, tailored to your unique requirements, and travel with confidence."</p>
+                        <p class="text-muted">"Serving corporate clients with precision, our 24/7 travel support ensures seamless journeys. Our dedicated team expertly handles itinerary changes, emergencies, and all travel needs, providing worry-free business trips. Trust in our dependable and personalized support, available round the clock, tailored to your unique requirements. Travel with confidence and peace of mind."</p>
                     </div>
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
