--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div class="container">
                 <div class="masthead-subheading">MGM TRAVEL AND TOURISM !</div>
                 <div class="masthead-heading text-uppercase">"Where Business Meets Adventure: Your Journey, Our Expertise"</div>
-                <a class="btn btn-primary btn-xl text-uppercase" href="#SERVICESSSSSSSSSSSSSSS">Tell Me More</a>
+                <a class="btn btn-primary btn-xl text-uppercase" href="#SERVICES">Tell Me More</a>
             </div>
         </header>
         <!-- Services-->
