--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
                                     <h2 class="text-uppercase">Air Travel</h2>
                                     <p class="item-intro text-muted">"Flights Made Simple, Memories Forever."</p>
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/1.jpg" alt="..." />
-                                    <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                                    <p>Our airline booking service for corporate clients is tailored to streamline business travel. We offer efficient booking, preferred rates, and personalized itineraries, ensuring cost savings, convenience, and a seamless travel experience for your corporate needs. Our expert team is dedicated to optimizing your travel arrangements.</p>
                                     <ul class="list-inline">
                                         <li>
                                             <strong>Client:</strong>
@@ -434,7 +434,7 @@
                                     <h2 class="text-uppercase">Hotel</h2>
                                     <p class="item-intro text-muted">"Book, Stay, Experience, Repeat."</p>
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/2.jpg" alt="..." />
-                                    <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                                    <p>Our hotel booking service for corporate clients prioritizes comfort and convenience. We secure competitive rates, manage reservations, and provide detailed accommodation options. Enhance your business trips with our tailored hotel solutions, delivering comfort and efficiency to your corporate travelers.</p>
                                     <ul class="list-inline">
                                         <li>
                                             <strong>Client:</strong>
@@ -469,7 +469,7 @@
                                     <h2 class="text-uppercase">VISA</h2>
                                     <p class="item-intro text-muted">"Your Visa, Your Gateway Abroad."</p>
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/3.jpg" alt="..." />
-                                    <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                                    <p>Our visa booking service for corporate clients offers a hassle-free process. We handle all visa requirements, expedite applications, and ensure compliance, allowing your employees to focus on business. Trust us for seamless, efficient visa solutions that simplify corporate travel.</p>
                                     <ul class="list-inline">
                                         <li>
                                             <strong>Client:</strong>
@@ -504,7 +504,7 @@
                                     <h2 class="text-uppercase">TRANSFERS</h2>
                                     <p class="item-intro text-muted">"Transfers Tailored to Your Itinerary."</p>
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/4.jpg" alt="..." />
-                                    <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                                    <p>Our transfers service for corporate clients offers punctual, reliable transportation. We prioritize efficiency, ensuring seamless transitions to and from meetings, airports, and hotels. Trust us for safe, comfortable transfers that enhance your corporate travel experience, providing peace of mind for your employees.</p>
                                     <ul class="list-inline">
                                         <li>
                                             <strong>Client:</strong>
@@ -539,7 +539,7 @@
                                     <h2 class="text-uppercase">TRAVEL INSURANCE</h2>
                                     <p class="item-intro text-muted">"Protection for Every Adventure Ahead."</p>
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/5.jpg" alt="..." />
-                                    <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                                    <p>Our travel insurance service for corporate clients safeguards your employees during business trips. We offer comprehensive coverage, including medical emergencies, trip cancellations, and lost belongings. Count on us to protect your team with tailored insurance solutions, ensuring their well-being and peace of mind.</p>
                                     <ul class="list-inline">
                                         <li>
                                             <strong>Client:</strong>
@@ -574,7 +574,7 @@
                                     <h2 class="text-uppercase">MICE</h2>
                                     <p class="item-intro text-muted">"Planning Excellence, Events Beyond Expectations."</p>
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/6.jpg" alt="..." />
-                                    <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                                    <p>Our MICE (Meetings, Incentives, Conferences, and Events) booking service for corporate clients excels in orchestrating memorable gatherings. We provide end-to-end event planning, venue selection, logistics, and creative solutions to elevate your corporate functions, ensuring they are impactful, well-executed, and aligned with your objectives.</p>
                                     <ul class="list-inline">
                                         <li>
                                             <strong>Client:</strong>
