--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Air Travel</div>
-                                <div class="portfolio-caption-subheading text-muted">Illustration</div>
+                                <div class="portfolio-caption-subheading text-muted">Integrity</div>
                             </div>
                         </div>
                     </div>
@@ -114,7 +114,7 @@
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Hotel</div>
-                                <div class="portfolio-caption-subheading text-muted">Graphic Design</div>
+                                <div class="portfolio-caption-subheading text-muted">Reliability</div>
                             </div>
                         </div>
                     </div>
@@ -129,7 +129,7 @@
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">VISA</div>
-                                <div class="portfolio-caption-subheading text-muted">Identity</div>
+                                <div class="portfolio-caption-subheading text-muted">Transparency</div>
                             </div>
                         </div>
                     </div>
@@ -144,7 +144,7 @@
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Transfers</div>
-                                <div class="portfolio-caption-subheading text-muted">Branding</div>
+                                <div class="portfolio-caption-subheading text-muted">Dependability</div>
                             </div>
                         </div>
                     </div>
@@ -159,7 +159,7 @@
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Travel Insurance</div>
-                                <div class="portfolio-caption-subheading text-muted">Website Design</div>
+                                <div class="portfolio-caption-subheading text-muted">Accountability</div>
                             </div>
                         </div>
                     </div>
@@ -174,7 +174,7 @@
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">MICE</div>
-                                <div class="portfolio-caption-subheading text-muted">Photography</div>
+                                <div class="portfolio-caption-subheading text-muted">Credibility</div>
                             </div>
                         </div>
                     </div>
@@ -407,7 +407,7 @@
                                         </li>
                                         <li>
                                             <strong>Category:</strong>
-                                            Illustration
+                                            Integrity
                                         </li>
                                     </ul>
                                     <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
@@ -442,7 +442,7 @@
                                         </li>
                                         <li>
                                             <strong>Category:</strong>
-                                            Graphic Design
+                                            Reliability
                                         </li>
                                     </ul>
                                     <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
@@ -477,7 +477,7 @@
                                         </li>
                                         <li>
                                             <strong>Category:</strong>
-                                            Identity
+                                            Transparency
                                         </li>
                                     </ul>
                                     <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
@@ -512,7 +512,7 @@
                                         </li>
                                         <li>
                                             <strong>Category:</strong>
-                                            Branding
+                                            Dependability
                                         </li>
                                     </ul>
                                     <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
@@ -547,7 +547,7 @@
                                         </li>
                                         <li>
                                             <strong>Category:</strong>
-                                            Website Design
+                                            Accountability
                                         </li>
                                     </ul>
                                     <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
@@ -582,7 +582,7 @@
                                         </li>
                                         <li>
                                             <strong>Category:</strong>
-                                            Photography
+                                            Credibility
                                         </li>
                                     </ul>
                                     <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
