--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="container">
                 <div class="masthead-subheading">MGM TRAVEL AND TOURISM !</div>
                 <div class="masthead-heading text-uppercase">"Where Business Meets Adventure: Your Journey, Our Expertise"</div>
-                <a class="btn btn-primary btn-xl text-uppercase" href="#SERVICES">SERVICES</a>
+                <a class="btn btn-primary btn-xl text-uppercase" href="#services">SERVICES</a>
             </div>
         </header>
         <!-- Services-->
