--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">ABOUT US</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h3 class="section-subheading text-muted">"Connecting People Through Knowledge and Innovation."</h3>
                 </div>
                 <ul class="timeline">
                     <li>
