--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
                             <i class="fas fa-shopping-cart fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="my-3">Dedicated Relationship Manager   </h4>
+<br>
                         <p class="text-muted">"Dedicated travel managers for corporate clients are your partners in efficient and hassle-free business travel. With their expertise and commitment, they tailor travel solutions to your needs, ensuring seamless journeys and cost-effective planning. Count on them to navigate complexities, so you can focus on your core business objectives, all while guaranteeing the success and satisfaction of your corporate travel experience."</p>
                     </div>
                     <div class="col-md-4">
@@ -249,10 +250,11 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Contact Us</h2>
-                    <h3 class="section-subheading custom-text">MGM Travel is committed to providing top-notch service. Reach out anytime via phone or email, and our dedicated team will assist promptly. Our contact center, Live Chat, and Email are available 24x7, ensuring your queries are addressed with care and efficiency..</h3>
-               .custom-text {
-                color: white;
-                }
+                   <h3 class="section-subheading text-muted custom-text">MGM Travel is committed to providing top-notch service. Reach out anytime via phone or email, and our dedicated team will assist promptly. Our contact center, Live Chat, and Email are available 24x7, ensuring your queries are addressed with care and efficiency.</h3>
+.section-subheading.text-muted.custom-text {
+  color: white !important;
+}
+
                 </div>
                 
                 <!-- * * * * * * * * * * * * * * *-->
