--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                         <h4 class="my-3">Round The Clock</h4>
                         <br>
                         <br>
-                        <p class="text-muted">"Serving corporate clients with precision, our 24/7 travel support ensures seamless journeys and exceptional experiences. Our dedicated team expertly handles itinerary changes, emergencies, and all your travel needs, providing worry-free and efficient business trips. Trust in our dependable and personalized support, available round the clock and tailored to your unique requirements. Travel with confidence, peace of mind, and absolute assurance in every aspect."</p>
+                        <p class="text-muted">"Serving corporate clients with precision, our 24/7 travel support ensures seamless journeys. Our dedicated team expertly handles itinerary changes, emergencies, and all travel needs, providing worry-free business trips. Trust in our dependable and personalized support, available round the clock, tailored to your unique requirements. Travel with confidence and peace of mind."</p>
                     </div>
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
