--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
                     </div>
                     <div class="col-lg-4 text-lg-end">
                         <a class="link-dark text-decoration-none me-3" href="mgmtravel.ae/terms">Privacy Policy</a>
-                        <a class="link-dark text-decoration-none" href="#!">Terms of Use</a>
+                        <a class="link-dark text-decoration-none" href="mgmtravel.ae/terms">Terms of Use</a>
                     </div>
                 </div>
             </div>
