--- a/terms.html
+++ b/terms.html
@@ -2,8 +2,7 @@
 <html lang="en">
 <head>
 
-
-    <meta charset="UTF-8">
+ <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Terms and Conditions</title>
     <style>
@@ -22,13 +21,13 @@
         }
 
         h1 {
-            font-size: 24px;
+            font-size: 36px; /* Increase the font size for the header */
             margin: 0;
         }
 
         main {
-            max-width: 800px;
-            margin: 20px auto;
+            /* Remove max-width and adjust padding */
+            margin: 20px 10%;
             padding: 20px;
             background-color: white;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -39,15 +38,20 @@
         }
 
         h2 {
-            font-size: 20px;
+            font-size: 28px; /* Increase the font size for section headings */
             margin-top: 0;
         }
 
         p {
-            font-size: 16px;
+            font-size: 18px; /* Increase the font size for paragraphs */
             line-height: 1.5;
         }
     </style>
+</head>
+<body>
+    <header>
+        <h1>Terms and Conditions</h1>
+    </header>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Terms and Conditions</title>
