--- a/terms.html
+++ b/terms.html
@@ -1,8 +1,7 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
-
- <meta charset="UTF-8">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Terms and Conditions</title>
     <style>
@@ -11,43 +10,15 @@
             margin: 0;
             padding: 0;
             background-color: #f2f2f2;
+            overflow-x: hidden; /* Hide horizontal scrollbar */
         }
 
         header {
             background-color: #333;
             color: white;
             text-align: center;
-            padding: 20px 0;
-        }
+            padding: 20px
 
-        h1 {
-            font-size: 36px; /* Increase the font size for the header */
-            margin: 0;
-        }
-
-        main {
-            /* Remove max-width and adjust padding */
-            margin: 20px 10%;
-            padding: 20px;
-            background-color: white;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-
-        section {
-            margin-bottom: 20px;
-        }
-
-        h2 {
-            font-size: 28px; /* Increase the font size for section headings */
-            margin-top: 0;
-        }
-
-        p {
-            font-size: 18px; /* Increase the font size for paragraphs */
-            line-height: 1.5;
-        }
-    </style>
-</head>
 <body>
     <header>
         <h1>Terms and Conditions</h1>
