--- a/terms.html
+++ b/terms.html
@@ -1,4 +1,4 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -12,34 +12,26 @@
             background-color: #f2f2f2;
             overflow-x: hidden; /* Hide horizontal scrollbar */
         }
-
         header {
             background-color: #333;
             color: white;
             text-align: center;
-            padding: 20px
-
-<body>
-    <header>
-        <h1>Terms and Conditions</h1>
-    </header>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Terms and Conditions</title>
+            padding: 20px;
+        }
+    </style>
 </head>
 <body>
-    <header>
+    <header role="banner">
         <h1>Terms and Conditions</h1>
     </header>
-    <main>
+    <main role="main">
         <section>
             <h2>Introduction</h2>
             <p>
                 Please read these Terms and Conditions carefully before you complete any booking with us as they set out your legal rights and obligations in relation to your booking. If you do not accept these Terms and Conditions, you must not make a booking with us.
             </p>
         </section>
-
-        <section>
+      <section>
             <h2>Agency</h2>
             <p>
                 We act as an agent for and sell various travel-related products as an agent on behalf of numerous transports, accommodation, and other service providers, such as airlines, coach, rail and cruise line operators as well as all of our wholesalers...
@@ -131,7 +123,6 @@
                     Please note that cheque payments require about 5 business days to process...
                 </p>
             </section>
-        </section>
     </main>
 </body>
 </html>
